--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,15 @@
-[project]
+[tool.poetry]
 name = "mazegen"
 version = "1.0.0"
 description = "maze generator built with curses"
-authors = [
-    { name = "Oussama Chouira"},
-    { name = "Reda Elouanass"}
-]
+authors = ["Oussama Chouira", "Reda Elouanass"]
 readme = "README.md"
 packages = [{include = "mazegen"}]
-requires-python = ">=3.10"
-dependencies = [
-    "pydantic (>=2.12.5,<3.0.0)",
-    "flake8 (>=7.3.0,<8.0.0)",
-    "mypy (>=1.19.1,<2.0.0)",
-]
 
+[tool.poetry.dependencies]
+python = "^3.10"
+pydantic = "^2.10.0"
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
